# ml_learn

data_wrangling/: pyproject.toml
deep_learning/: pyproject.toml
linear_regression/: pyproject.toml
