[tool.poetry]
name = "data-wrangling"
version = "0.1.0"
description = ""
authors = ["f-bolanos <bolanosf1987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
polars = "^0.20.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
